# wfcommons-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: README.md
scripts/: __init__.py  generate_wfcommons_instances.py  inspect_wfcommons_json.py
tests/: test_wfcommons_generator.py
wfcommons_generator/: __init__.py  core.py
