[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wfcommons-generator"
version = "0.1.0"
description = "Generate WfCommons WfFormat JSON workflow instances."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "wfcommons==1.4",
]
keywords = ["workflow", "wfcommons", "wfformat", "workflow-generation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.scripts]
wfcommons-generate = "scripts.generate_wfcommons_instances:main"
wfcommons-inspect = "scripts.inspect_wfcommons_json:main"

[tool.setuptools.packages.find]
include = ["wfcommons_generator*", "scripts*"]

[project.optional-dependencies]
test = [
    "pytest",
]
